--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -6,4 +6,18 @@
         <item name="android:padding">16dp</item>
         <item name="android:textSize">16sp</item>
     </style>
+
+    <style name="game_text_view">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="OptionTextStyle">
+        <item name="android:padding">16dp</item>
+        <item name="android:textSize">36sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
