add GameFinishedFragment UI

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,8 @@
 <androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_fragment_container"
-    android:name="com.gap.compositionnumber.presentation.fragments.GameFragment"
+    android:name="com.gap.compositionnumber.presentation.fragments.GameFinishedFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:layout="@layout/fragment_choose_level"
+    tools:layout="@layout/fragment_welcome"
     tools:context=".presentation.MainActivity" />
