--- a/app/src/main/res/layout/fragment_choose_level.xml
+++ b/app/src/main/res/layout/fragment_choose_level.xml
@@ -35,6 +35,7 @@
         android:text="@string/easy" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/middleButton"
         style="@style/choose_level_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,6 +45,7 @@
         android:text="@string/middle" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/hardButton"
         style="@style/choose_level_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
